src/objects/scZimmic__CommentItem__c.object
<CustomObject>
    <fields>
        <fullName>scZimmic__CommentItemId__c</fullName>
        <label>CommentItemId</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>scZimmic__PostItemId__c</fullName>
        <label>PostItemId</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>scZimmic__hashtag__c</fullName>
        <label>hashtag</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>scZimmic__servicePostId__c</fullName>
        <label>servicePostId</label>
        <type>TextArea</type>
    </fields>
    <label>CommentItem</label>
    <nameField>
        <label>CommentItem Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CommentItems</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>